--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+            <a href="https://youtu.be/3TkIR4U4seA?si=VHUGwEqDAdT2FCgc">
                 <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+            <a href="https://youtu.be/ezCXB8WJ1kI?si=NJeaPBFprXtVSV7v">
                 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
+            <a href="https://youtu.be/l4ZXxFs69PU?si=W_v2U676JeTdzMbE">
                 <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
+            <a href="https://youtu.be/37pavr2n5r0?si=qQdBebG_8Kddo7n6">
                 <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
+            <a href="https://youtu.be/GgD8NB8sNWM?si=ENGCIAcrNzfxmvD1">
                 <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
             </a>
         </div>
